2016-01-22 Thomas Calvet <calvet@cppm.in2p3.fr>
	* Adding possibility to profile several/all systematics (coma separated list/all)
	* Adding protection to the likelihood scan in case the systematic has been removed in the pruning step
	
2016-01-20 Michele Pinamonti <michele.pinamonti@gmail.com>
        * Adding experimental option to remove constrain for some systematics -> use IsFreeParameter: TRUE (working only for fit, crashing for limits...)
        * Implementing new options for histogram inputs: Region -> HistoPathSuff(s)
        
2016-01-11 Tamara Vazquez Schroeder <tamara.vazquez.schroeder@cern.ch>
        * Fixing problems with OveralSystematic in case of correction for negative/null bins in the nom. histogram

2016-01-11 Tamara Vazquez Schroeder <tamara.vazquez.schroeder@cern.ch>
	* Adding likelihood scan option of POI or NP

2016-01-09 Loic Valery <lvalery@cern.ch>
        * Moved StatOnly flag from Fit to Job block

2016-01-08 Michele Pinamonti <michele.pinamonti@gmail.com>
        * Fixing problems with reference systematics & one-sided symmetrisation
        * ConfigParser: spaces before % now allowed
        
2016-01-08 Thomas Calvet <calvet@cppm.in2p3.fr>
	* Modification if the Binning option is set, NTuple are directly turned in histograms with the specified binning (remove the rebin step to avoid edge problems).
	* Adding AutoBin option for Binning (Binning: "AutoBin","TransfoD",1.,5.).
	* Adding two transformation ("TransfoD","TransfoF") for binning. Each of them requires two parameters.
	* Adding string to double conversion function, with exception protection (try-catch) and protection for incomplete convertion (52f8 -> 52 will crash). Used in the options added here, can be propagated to all conversions.
	
2015-12-18 Michele Pinamonti <michele.pinamonti@gmail.com>
        * Fixing signal draw options
        * Updating documentation
        * tex tables automatic creating added (by Marine)
        * Svn-Tagging: 00-01-01
        