@@ -17,7 +17,7 @@ Job: "ttH2015"
   PlotOptions: "NOSIG,OVERSIG"
   NtupleName: "nominal"
   DebugLevel: 0
-%   MCstatThreshold: 0.10
+  MCstatThreshold: 0.01
   SystControlPlots: TRUE
   SystPruningShape: 0.01
   SystPruningNorm: 0.01
@@ -109,6 +109,7 @@ Sample: "ttbar"
   LineColor: 1
 %   NtupleFile: "ttbar_pyt8"
   NtupleFile: "ttbar"
+%   UseMCstat: FALSE
   
 % Sample: "wjets"
 %   Type: BACKGROUND
@@ -147,136 +148,136 @@ Sample: "singleTop"
 %   OverallDown: -0.48
 %   Samples: wjets; zjets
   
-Systematic: "stXsec"
-  Title: "Single top x-section" 
-  Type: OVERALL
-  OverallUp:    0.05
-  OverallDown: -0.05
-  Samples: singleTop
-
-Systematic: "ttXsec"
-  Title: "t#bar{t} x-section" 
-  Type: OVERALL
-  OverallUp:    0.10
-  OverallDown: -0.10
-%   IsFreeParameter: TRUE
-  Samples: ttbar
-
-% Weight systematics
-  
-% Systematic: "wjNjets";  "zjNjets"
-%   Title: "W+jets Njets"; "Z+jets Njets" 
-%   Type: HISTO
-%   WeightSufUp: "(1+0.24*(jet_n-4))"
-%   WeightSufDown: "(1-0.24*(jet_n-4))"
-%   Samples: wjets; zjets
-%   Smoothing: 40
-  
-% Systematic: "LepSF_EL_Trigger";"LepSF_EL_Reco";"LepSF_EL_ID";"LepSF_EL_Isol"
-%   Title: "Electron Trigger Eff";"Electron Reco Eff";"Electron ID Eff";"Electron Isolation Eff"
+% Systematic: "stXsec"
+%   Title: "Single top x-section" 
+%   Type: OVERALL
+%   OverallUp:    0.05
+%   OverallDown: -0.05
+%   Samples: singleTop
+% 
+% Systematic: "ttXsec"
+%   Title: "t#bar{t} x-section" 
+%   Type: OVERALL
+%   OverallUp:    0.10
+%   OverallDown: -0.10
+% %   IsFreeParameter: TRUE
+%   Samples: ttbar
+% 
+% % Weight systematics
+%   
+% % Systematic: "wjNjets";  "zjNjets"
+% %   Title: "W+jets Njets"; "Z+jets Njets" 
+% %   Type: HISTO
+% %   WeightSufUp: "(1+0.24*(jet_n-4))"
+% %   WeightSufDown: "(1-0.24*(jet_n-4))"
+% %   Samples: wjets; zjets
+% %   Smoothing: 40
+%   
+% % Systematic: "LepSF_EL_Trigger";"LepSF_EL_Reco";"LepSF_EL_ID";"LepSF_EL_Isol"
+% %   Title: "Electron Trigger Eff";"Electron Reco Eff";"Electron ID Eff";"Electron Isolation Eff"
+% %   Type: HISTO
+% %   Samples: all
+% %   WeightSufUp: "weight_leptonSF_EL_SF_Trigger_UP/weight_leptonSF";"weight_leptonSF_EL_SF_Reco_UP/weight_leptonSF";"weight_leptonSF_EL_SF_ID_UP/weight_leptonSF";"weight_leptonSF_EL_SF_Isol_UP/weight_leptonSF"
+% %   WeightSufDown: "weight_leptonSF_EL_SF_Trigger_DOWN/weight_leptonSF";"weight_leptonSF_EL_SF_Reco_DOWN/weight_leptonSF";"weight_leptonSF_EL_SF_ID_DOWN/weight_leptonSF";"weight_leptonSF_EL_SF_Isol_DOWN/weight_leptonSF"
+% %   Smoothing: 40
+% %   Symmetrisation: TWOSIDED
+% %   
+% % Systematic: "LepSF_MU_Trigger_STAT";"LepSF_MU_Trigger_SYST";"LepSF_MU_ID_STAT";"LepSF_MU_ID_SYST";"LepSF_MU_Isol"
+% %   Title: "Muon Trigger Eff (stat)";"Muon Trigger Eff (syst)";"Muon ID Eff (stat)";"Muon ID Eff (syst)";"Muon Isolation Eff"
+% %   Type: HISTO
+% %   Samples: all
+% %   WeightSufUp: "weight_leptonSF_MU_SF_Trigger_STAT_UP/weight_leptonSF";"weight_leptonSF_MU_SF_Trigger_SYST_UP/weight_leptonSF";"weight_leptonSF_MU_SF_ID_STAT_UP/weight_leptonSF";"weight_leptonSF_MU_SF_ID_SYST_UP/weight_leptonSF";"weight_leptonSF_MU_SF_Isol_UP/weight_leptonSF"
+% %   WeightSufDown: "weight_leptonSF_MU_SF_Trigger_STAT_DOWN/weight_leptonSF";"weight_leptonSF_MU_SF_Trigger_SYST_DOWN/weight_leptonSF";"weight_leptonSF_MU_SF_ID_STAT_DOWN/weight_leptonSF";"weight_leptonSF_MU_SF_ID_SYST_DOWN/weight_leptonSF";"weight_leptonSF_MU_SF_Isol_DOWN/weight_leptonSF"
+% %   Smoothing: 40
+% %   Symmetrisation: TWOSIDED
+% 
+% Systematic: "BTag_B_NP1"; "BTag_B_NP2"; "BTag_B_NP3"; "BTag_B_NP4"; "BTag_B_NP5"; "BTag_B_NP6"
+%   Title: "b-tag Eigenvar. 1";"b-tag Eigenvar. 2";"b-tag Eigenvar. 3";"b-tag Eigenvar. 4";"b-tag Eigenvar. 5";"b-tag Eigenvar. 6"
 %   Type: HISTO
 %   Samples: all
-%   WeightSufUp: "weight_leptonSF_EL_SF_Trigger_UP/weight_leptonSF";"weight_leptonSF_EL_SF_Reco_UP/weight_leptonSF";"weight_leptonSF_EL_SF_ID_UP/weight_leptonSF";"weight_leptonSF_EL_SF_Isol_UP/weight_leptonSF"
-%   WeightSufDown: "weight_leptonSF_EL_SF_Trigger_DOWN/weight_leptonSF";"weight_leptonSF_EL_SF_Reco_DOWN/weight_leptonSF";"weight_leptonSF_EL_SF_ID_DOWN/weight_leptonSF";"weight_leptonSF_EL_SF_Isol_DOWN/weight_leptonSF"
+%   WeightSufUp: "weight_bTagSF_eigenvars_B_up[0]/weight_bTagSF"; "weight_bTagSF_eigenvars_B_up[1]/weight_bTagSF"; "weight_bTagSF_eigenvars_B_up[2]/weight_bTagSF"; "weight_bTagSF_eigenvars_B_up[3]/weight_bTagSF"; "weight_bTagSF_eigenvars_B_up[4]/weight_bTagSF"; "weight_bTagSF_eigenvars_B_up[5]/weight_bTagSF"
+%   WeightSufDown: "weight_bTagSF_eigenvars_B_down[0]/weight_bTagSF"; "weight_bTagSF_eigenvars_B_down[1]/weight_bTagSF"; "weight_bTagSF_eigenvars_B_down[2]/weight_bTagSF"; "weight_bTagSF_eigenvars_B_down[3]/weight_bTagSF"; "weight_bTagSF_eigenvars_B_down[4]/weight_bTagSF"; "weight_bTagSF_eigenvars_B_down[5]/weight_bTagSF"
 %   Smoothing: 40
 %   Symmetrisation: TWOSIDED
 %   
-% Systematic: "LepSF_MU_Trigger_STAT";"LepSF_MU_Trigger_SYST";"LepSF_MU_ID_STAT";"LepSF_MU_ID_SYST";"LepSF_MU_Isol"
-%   Title: "Muon Trigger Eff (stat)";"Muon Trigger Eff (syst)";"Muon ID Eff (stat)";"Muon ID Eff (syst)";"Muon Isolation Eff"
+% % Systematic: "BTag_C_NP1"; "BTag_C_NP2"; "BTag_C_NP3"; "BTag_C_NP4"
+% %   Title: "c-tag Eigenvar. 1";"c-tag Eigenvar. 2";"c-tag Eigenvar. 3";"c-tag Eigenvar. 4"
+% %   Type: HISTO
+% %   Samples: all
+% %   WeightSufUp: "weight_bTagSF_eigenvars_C_up[0]/weight_bTagSF"; "weight_bTagSF_eigenvars_C_up[1]/weight_bTagSF"; "weight_bTagSF_eigenvars_C_up[2]/weight_bTagSF"; "weight_bTagSF_eigenvars_C_up[3]/weight_bTagSF"
+% %   WeightSufDown: "weight_bTagSF_eigenvars_C_down[0]/weight_bTagSF"; "weight_bTagSF_eigenvars_C_down[1]/weight_bTagSF"; "weight_bTagSF_eigenvars_C_down[2]/weight_bTagSF"; "weight_bTagSF_eigenvars_C_down[3]/weight_bTagSF"
+% %   Smoothing: 40
+% %   Symmetrisation: TWOSIDED
+% % 
+% % Systematic: "BTag_Light_NP1"; "BTag_Light_NP2"; "BTag_Light_NP3"; "BTag_Light_NP4"; "BTag_Light_NP5"; "BTag_Light_NP6"; "BTag_Light_NP7"; "BTag_Light_NP8"; "BTag_Light_NP9"; "BTag_Light_NP10"; "BTag_Light_NP11"; "BTag_Light_NP12"
+% %   Title: "light-tag Eigenvar. 1";"light-tag Eigenvar. 2";"light-tag Eigenvar. 3";"light-tag Eigenvar. 4";"light-tag Eigenvar. 5";"light-tag Eigenvar. 6"; "light-tag Eigenvar. 7";"light-tag Eigenvar. 8";"light-tag Eigenvar. 9";"light-tag Eigenvar. 10";"light-tag Eigenvar. 11";"light-tag Eigenvar. 12"
+% %   Type: HISTO
+% %   Samples: all
+% %   WeightSufUp: "weight_bTagSF_eigenvars_Light_up[0]/weight_bTagSF"; "weight_bTagSF_eigenvars_Light_up[1]/weight_bTagSF"; "weight_bTagSF_eigenvars_Light_up[2]/weight_bTagSF"; "weight_bTagSF_eigenvars_Light_up[3]/weight_bTagSF"; "weight_bTagSF_eigenvars_Light_up[4]/weight_bTagSF"; "weight_bTagSF_eigenvars_Light_up[5]/weight_bTagSF"; "weight_bTagSF_eigenvars_Light_up[6]/weight_bTagSF"; "weight_bTagSF_eigenvars_Light_up[7]/weight_bTagSF"; "weight_bTagSF_eigenvars_Light_up[8]/weight_bTagSF"; "weight_bTagSF_eigenvars_Light_up[9]/weight_bTagSF"; "weight_bTagSF_eigenvars_Light_up[10]/weight_bTagSF"; "weight_bTagSF_eigenvars_Light_up[11]/weight_bTagSF"
+% %   WeightSufDown: "weight_bTagSF_eigenvars_Light_down[0]/weight_bTagSF"; "weight_bTagSF_eigenvars_Light_down[1]/weight_bTagSF"; "weight_bTagSF_eigenvars_Light_down[2]/weight_bTagSF"; "weight_bTagSF_eigenvars_Light_down[3]/weight_bTagSF"; "weight_bTagSF_eigenvars_Light_down[4]/weight_bTagSF"; "weight_bTagSF_eigenvars_Light_down[5]/weight_bTagSF"; "weight_bTagSF_eigenvars_Light_down[6]/weight_bTagSF"; "weight_bTagSF_eigenvars_Light_down[7]/weight_bTagSF"; "weight_bTagSF_eigenvars_Light_down[8]/weight_bTagSF"; "weight_bTagSF_eigenvars_Light_down[9]/weight_bTagSF"; "weight_bTagSF_eigenvars_Light_down[10]/weight_bTagSF"; "weight_bTagSF_eigenvars_Light_down[11]/weight_bTagSF"
+% %   Smoothing: 40
+% %   Symmetrisation: TWOSIDED
+% %   
+% % Systematic: "BTag_Extrapolation"; "BTag_ExtrapolationFromCharm"
+% %   Title: "b-tag Extrapolation";"b-tag Extrapolation from c"
+% %   Type: HISTO
+% %   Samples: all
+% %   WeightSufDown: "weight_bTagSF_extrapolation_down/weight_bTagSF"; "weight_bTagSF_extrapolation_from_charm_down/weight_bTagSF"
+% %   Smoothing: 40
+% %   Symmetrisation: ONESIDED
+%   
+% % Systematics with separate tree
+%   
+% Systematic: "JES_Scenario1_NP1";"JES_Scenario1_NP2";"JES_Scenario1_NP3"
+%   Title: "JES NPScenario 1 - NP 1";"JES NPScenario 1 - NP 2";"JES NPScenario 1 - NP 3"
 %   Type: HISTO
 %   Samples: all
-%   WeightSufUp: "weight_leptonSF_MU_SF_Trigger_STAT_UP/weight_leptonSF";"weight_leptonSF_MU_SF_Trigger_SYST_UP/weight_leptonSF";"weight_leptonSF_MU_SF_ID_STAT_UP/weight_leptonSF";"weight_leptonSF_MU_SF_ID_SYST_UP/weight_leptonSF";"weight_leptonSF_MU_SF_Isol_UP/weight_leptonSF"
-%   WeightSufDown: "weight_leptonSF_MU_SF_Trigger_STAT_DOWN/weight_leptonSF";"weight_leptonSF_MU_SF_Trigger_SYST_DOWN/weight_leptonSF";"weight_leptonSF_MU_SF_ID_STAT_DOWN/weight_leptonSF";"weight_leptonSF_MU_SF_ID_SYST_DOWN/weight_leptonSF";"weight_leptonSF_MU_SF_Isol_DOWN/weight_leptonSF"
-%   Smoothing: 40
-%   Symmetrisation: TWOSIDED
-
-Systematic: "BTag_B_NP1"; "BTag_B_NP2"; "BTag_B_NP3"; "BTag_B_NP4"; "BTag_B_NP5"; "BTag_B_NP6"
-  Title: "b-tag Eigenvar. 1";"b-tag Eigenvar. 2";"b-tag Eigenvar. 3";"b-tag Eigenvar. 4";"b-tag Eigenvar. 5";"b-tag Eigenvar. 6"
-  Type: HISTO
-  Samples: all
-  WeightSufUp: "weight_bTagSF_eigenvars_B_up[0]/weight_bTagSF"; "weight_bTagSF_eigenvars_B_up[1]/weight_bTagSF"; "weight_bTagSF_eigenvars_B_up[2]/weight_bTagSF"; "weight_bTagSF_eigenvars_B_up[3]/weight_bTagSF"; "weight_bTagSF_eigenvars_B_up[4]/weight_bTagSF"; "weight_bTagSF_eigenvars_B_up[5]/weight_bTagSF"
-  WeightSufDown: "weight_bTagSF_eigenvars_B_down[0]/weight_bTagSF"; "weight_bTagSF_eigenvars_B_down[1]/weight_bTagSF"; "weight_bTagSF_eigenvars_B_down[2]/weight_bTagSF"; "weight_bTagSF_eigenvars_B_down[3]/weight_bTagSF"; "weight_bTagSF_eigenvars_B_down[4]/weight_bTagSF"; "weight_bTagSF_eigenvars_B_down[5]/weight_bTagSF"
-  Smoothing: 40
-  Symmetrisation: TWOSIDED
-  
-% Systematic: "BTag_C_NP1"; "BTag_C_NP2"; "BTag_C_NP3"; "BTag_C_NP4"
-%   Title: "c-tag Eigenvar. 1";"c-tag Eigenvar. 2";"c-tag Eigenvar. 3";"c-tag Eigenvar. 4"
-%   Type: HISTO
-%   Samples: all
-%   WeightSufUp: "weight_bTagSF_eigenvars_C_up[0]/weight_bTagSF"; "weight_bTagSF_eigenvars_C_up[1]/weight_bTagSF"; "weight_bTagSF_eigenvars_C_up[2]/weight_bTagSF"; "weight_bTagSF_eigenvars_C_up[3]/weight_bTagSF"
-%   WeightSufDown: "weight_bTagSF_eigenvars_C_down[0]/weight_bTagSF"; "weight_bTagSF_eigenvars_C_down[1]/weight_bTagSF"; "weight_bTagSF_eigenvars_C_down[2]/weight_bTagSF"; "weight_bTagSF_eigenvars_C_down[3]/weight_bTagSF"
+%   NtupleNameUp: "JET_NPScenario1_JET_GroupedNP_1__1up";"JET_NPScenario1_JET_GroupedNP_2__1up";"JET_NPScenario1_JET_GroupedNP_3__1up"
+%   NtupleNameDown: "JET_NPScenario1_JET_GroupedNP_1__1down";"JET_NPScenario1_JET_GroupedNP_2__1down";"JET_NPScenario1_JET_GroupedNP_3__1down"
 %   Smoothing: 40
 %   Symmetrisation: TWOSIDED
 % 
-% Systematic: "BTag_Light_NP1"; "BTag_Light_NP2"; "BTag_Light_NP3"; "BTag_Light_NP4"; "BTag_Light_NP5"; "BTag_Light_NP6"; "BTag_Light_NP7"; "BTag_Light_NP8"; "BTag_Light_NP9"; "BTag_Light_NP10"; "BTag_Light_NP11"; "BTag_Light_NP12"
-%   Title: "light-tag Eigenvar. 1";"light-tag Eigenvar. 2";"light-tag Eigenvar. 3";"light-tag Eigenvar. 4";"light-tag Eigenvar. 5";"light-tag Eigenvar. 6"; "light-tag Eigenvar. 7";"light-tag Eigenvar. 8";"light-tag Eigenvar. 9";"light-tag Eigenvar. 10";"light-tag Eigenvar. 11";"light-tag Eigenvar. 12"
+% Systematic: "JER"
+%   Title: "JER"
 %   Type: HISTO
 %   Samples: all
-%   WeightSufUp: "weight_bTagSF_eigenvars_Light_up[0]/weight_bTagSF"; "weight_bTagSF_eigenvars_Light_up[1]/weight_bTagSF"; "weight_bTagSF_eigenvars_Light_up[2]/weight_bTagSF"; "weight_bTagSF_eigenvars_Light_up[3]/weight_bTagSF"; "weight_bTagSF_eigenvars_Light_up[4]/weight_bTagSF"; "weight_bTagSF_eigenvars_Light_up[5]/weight_bTagSF"; "weight_bTagSF_eigenvars_Light_up[6]/weight_bTagSF"; "weight_bTagSF_eigenvars_Light_up[7]/weight_bTagSF"; "weight_bTagSF_eigenvars_Light_up[8]/weight_bTagSF"; "weight_bTagSF_eigenvars_Light_up[9]/weight_bTagSF"; "weight_bTagSF_eigenvars_Light_up[10]/weight_bTagSF"; "weight_bTagSF_eigenvars_Light_up[11]/weight_bTagSF"
-%   WeightSufDown: "weight_bTagSF_eigenvars_Light_down[0]/weight_bTagSF"; "weight_bTagSF_eigenvars_Light_down[1]/weight_bTagSF"; "weight_bTagSF_eigenvars_Light_down[2]/weight_bTagSF"; "weight_bTagSF_eigenvars_Light_down[3]/weight_bTagSF"; "weight_bTagSF_eigenvars_Light_down[4]/weight_bTagSF"; "weight_bTagSF_eigenvars_Light_down[5]/weight_bTagSF"; "weight_bTagSF_eigenvars_Light_down[6]/weight_bTagSF"; "weight_bTagSF_eigenvars_Light_down[7]/weight_bTagSF"; "weight_bTagSF_eigenvars_Light_down[8]/weight_bTagSF"; "weight_bTagSF_eigenvars_Light_down[9]/weight_bTagSF"; "weight_bTagSF_eigenvars_Light_down[10]/weight_bTagSF"; "weight_bTagSF_eigenvars_Light_down[11]/weight_bTagSF"
-%   Smoothing: 40
-%   Symmetrisation: TWOSIDED
-%   
-% Systematic: "BTag_Extrapolation"; "BTag_ExtrapolationFromCharm"
-%   Title: "b-tag Extrapolation";"b-tag Extrapolation from c"
-%   Type: HISTO
-%   Samples: all
-%   WeightSufDown: "weight_bTagSF_extrapolation_down/weight_bTagSF"; "weight_bTagSF_extrapolation_from_charm_down/weight_bTagSF"
+%   NtupleNameUp: "JET_JER_SINGLE_NP__1up"
 %   Smoothing: 40
 %   Symmetrisation: ONESIDED
-  
-% Systematics with separate tree
-  
-Systematic: "JES_Scenario1_NP1";"JES_Scenario1_NP2";"JES_Scenario1_NP3"
-  Title: "JES NPScenario 1 - NP 1";"JES NPScenario 1 - NP 2";"JES NPScenario 1 - NP 3"
-  Type: HISTO
-  Samples: all
-  NtupleNameUp: "JET_NPScenario1_JET_GroupedNP_1__1up";"JET_NPScenario1_JET_GroupedNP_2__1up";"JET_NPScenario1_JET_GroupedNP_3__1up"
-  NtupleNameDown: "JET_NPScenario1_JET_GroupedNP_1__1down";"JET_NPScenario1_JET_GroupedNP_2__1down";"JET_NPScenario1_JET_GroupedNP_3__1down"
-  Smoothing: 40
-  Symmetrisation: TWOSIDED
-
-Systematic: "JER"
-  Title: "JER"
-  Type: HISTO
-  Samples: all
-  NtupleNameUp: "JET_JER_SINGLE_NP__1up"
-  Smoothing: 40
-  Symmetrisation: ONESIDED
-  
-% Systematic: "EG_Resolution";"EG_Scale"
-%   Title: "Electron Resolution";"Electron Scale"
-%   Type: HISTO
-%   Samples: all
-%   NtupleNameUp: "EG_RESOLUTION_ALL__1up";"EG_SCALE_ALL__1up"
-%   NtupleNameDown: "EG_RESOLUTION_ALL__1down";"EG_SCALE_ALL__1down"  
-%   Smoothing: 40
-%   Symmetrisation: TWOSIDED
 %   
-% Systematic: "Muons_ID";"Muons_MS";"Muons_Scale"
-%   Title: "Muon ID";"Muon MS";"Muon Scale"
-%   Type: HISTO
-%   Samples: all
-%   NtupleNameUp: "MUONS_ID__1up";"MUONS_MS__1up";"MUONS_SCALE__1up"
-%   NtupleNameDown: "MUONS_ID__1down";"MUONS_MS__1down";"MUONS_SCALE__1down"
-%   Smoothing: 40
-%   Symmetrisation: TWOSIDED
-  
-Systematic: "tt_Rad_HiLow"
-  Title: "t#bar{t} Radiation"
-  Type: HISTO
-  Samples: ttbar
-  Regions: HThad_5j3b,HThad_ge6jge4b
-  NtupleFileSufUp: "_radHi"
-  NtupleFileSufDown: "_radLo"
-%   ReferenceSample: ttbar_pyt8
-  Smoothing: 40
-  Symmetrisation: TWOSIDED
-
-% Systematic: "tt_Shower"
-%   Title: "t#bar{t} Parton Shower"
+% % Systematic: "EG_Resolution";"EG_Scale"
+% %   Title: "Electron Resolution";"Electron Scale"
+% %   Type: HISTO
+% %   Samples: all
+% %   NtupleNameUp: "EG_RESOLUTION_ALL__1up";"EG_SCALE_ALL__1up"
+% %   NtupleNameDown: "EG_RESOLUTION_ALL__1down";"EG_SCALE_ALL__1down"  
+% %   Smoothing: 40
+% %   Symmetrisation: TWOSIDED
+% %   
+% % Systematic: "Muons_ID";"Muons_MS";"Muons_Scale"
+% %   Title: "Muon ID";"Muon MS";"Muon Scale"
+% %   Type: HISTO
+% %   Samples: all
+% %   NtupleNameUp: "MUONS_ID__1up";"MUONS_MS__1up";"MUONS_SCALE__1up"
+% %   NtupleNameDown: "MUONS_ID__1down";"MUONS_MS__1down";"MUONS_SCALE__1down"
+% %   Smoothing: 40
+% %   Symmetrisation: TWOSIDED
+%   
+% Systematic: "tt_Rad_HiLow"
+%   Title: "t#bar{t} Radiation"
 %   Type: HISTO
 %   Samples: ttbar
-%   NtupleFileSufUp: "_pyt8"
+%   Regions: HThad_5j3b,HThad_ge6jge4b
+%   NtupleFileSufUp: "_radHi"
+%   NtupleFileSufDown: "_radLo"
+% %   ReferenceSample: ttbar_pyt8
 %   Smoothing: 40
-%   Symmetrisation: ONESIDED
+%   Symmetrisation: TWOSIDED
+% 
+% % Systematic: "tt_Shower"
+% %   Title: "t#bar{t} Parton Shower"
+% %   Type: HISTO
+% %   Samples: ttbar
+% %   NtupleFileSufUp: "_pyt8"
+% %   Smoothing: 40
+% %   Symmetrisation: ONESIDED
